readability fixes + wip easter egg

--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@
 		@apply rounded-xl p-4
     text-sm font-semibold
     text-black duration-200 hover:scale-105
-    hover:bg-dark_darker active:scale-95
+    hover:bg-dark_darker hover:bg-opacity-50 active:scale-95
     dark:text-white sm:p-5
     sm:text-base;
 	}
